[gd_scene load_steps=8 format=3 uid="uid://b1bm8tdi3cpvr"]

[ext_resource type="Script" path="res://Assets/Modules/Decor/Views/DecorManualMachineView.gd" id="1_58p1h"]
[ext_resource type="Texture2D" uid="uid://7pko63jpvu24" path="res://Assets/Textures/Stage/mixing_table.png" id="2_d4red"]
[ext_resource type="Theme" uid="uid://d3ht3ymqa0arj" path="res://Assets/Modules/UI/Themes/field_slider_theme.tres" id="3_t5a3c"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wsks1"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sd36r"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gglkp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ysvh"]
size = Vector2(88, 208)

[node name="MixingTable" type="Node2D" node_paths=PackedStringArray("ItemSprite", "HoverButton", "InteractArea", "ProgressSlider")]
script = ExtResource("1_58p1h")
ItemSprite = NodePath("ItemSprite")
HoverButton = NodePath("DecorSprite/HoverButton")
InteractArea = NodePath("InteractArea")
MachineName = "mixer"
ProgressSlider = NodePath("ProgressSlider")

[node name="DecorSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_d4red")
offset = Vector2(0, -46)

[node name="HoverButton" type="Button" parent="DecorSprite"]
modulate = Color(2, 2, 2, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.595
offset_top = -186.0
offset_right = 4.405
offset_bottom = -46.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_styles/hover = SubResource("StyleBoxTexture_wsks1")
theme_override_styles/pressed = SubResource("StyleBoxTexture_sd36r")
theme_override_styles/normal = SubResource("StyleBoxTexture_gglkp")
icon = ExtResource("2_d4red")

[node name="ItemSprite" type="Sprite2D" parent="."]
offset = Vector2(0, -48)

[node name="InteractArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
position = Vector2(68, 8)
shape = SubResource("RectangleShape2D_8ysvh")
debug_color = Color(0.515554, 0.576144, 3.85046e-07, 0.42)

[node name="ProgressSlider" type="HSlider" parent="."]
z_index = 1
offset_left = -64.0
offset_top = -136.0
offset_right = 80.0
offset_bottom = -104.0
mouse_filter = 2
theme = ExtResource("3_t5a3c")
step = 0.05
